--- a/index.html
+++ b/index.html
@@ -634,5 +634,14 @@ function hide(){
     document.getElementById("text").innerHTML="";
 }
 </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CVH9KHFNBB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-CVH9KHFNBB');
+    </script>
 </body>
 </html>
