--- a/index.html
+++ b/index.html
@@ -340,7 +340,16 @@
                 <div class="card bg-white" style="border-top: 03px solid #4cc2c4">
                     <img src="img/person/croped/Logo 1.jpg" style="width: 190px; height: 100px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center " style="color: #4cc2c4;">Software Developer</h3>
-                    <p class="lead text-justify p-3">Company: Ayamah Tibaa <br> Position:Intermediate Software Developer<br>Duration: 01/2022 - Present <br>Contract end date: 10/2024 <br>Contact person: Takalani Tshivhase - 073 515 4500</p>
+                    <p class="lead text-justify p-3">Company: Ayamah Tibaa <br> Position:Intermediate Software Developer<br>Duration: 01/2022 - 04/2024 <br>Reason for leaving: Exciting permanent position<br>Contact person: Takalani Tshivhase - 073 515 4500</p>
+                    <!-- <button id="ayamah" href="" style=" border: 1px solid lightblue;">View more</button> -->
+                </div> 
+            </div>
+
+            <div class="col-lg-6" style="margin-top: 20px;">
+                <div class="card bg-white" style="border-top: 03px solid #000">
+                    <img src="img/work/428754-700x364-removebg-preview.png" style="width: 220px; height: 100px;" class="img-fluid py-3 m-auto">
+                    <h3 class="text-center " style="color: #000;">Techsys Digital</h3>
+                    <p class="lead text-justify p-3">Company: Techsys <br> Position:Front-End Developer<br>Duration: 04/2024 - Present <br>Contact person: Rachel Mcfarlane - 071 871 4514</p>
                     <!-- <button id="ayamah" href="" style=" border: 1px solid lightblue;">View more</button> -->
                 </div> 
             </div>
@@ -451,6 +460,14 @@
                 <a href="https://idms.pimoecdpw.co.za/Identity/STS/Forms/Account/Login?ReturnUrl=%2fIdentity%2fsts%2fForms%2fwsfed%3fwa%3dwsignin1.0%26wtrealm%3dhttps%253a%252f%252fidms.pimoecdpw.co.za%252fRuntime%252f%26wctx%3drm%253d1%2526id%253dk2passive%2526ru%253d_trust%25252fspauthorize.aspx%25253fsession%25253d76d8f01f-23d7-4b67-8dd3-e6e1e7217edb%252526_spInt%25253d1%26wct%3d2023-08-31T10%253a24%253a00Z%26wreply%3dhttps%253a%252f%252fidms.pimoecdpw.co.za%252fRuntime%252f&wa=wsignin1.0&wtrealm=https%3a%2f%2fidms.pimoecdpw.co.za%2fRuntime%2f&wctx=rm%3d1%26id%3dk2passive%26ru%3d_trust%252fspauthorize.aspx%253fsession%253d76d8f01f-23d7-4b67-8dd3-e6e1e7217edb%2526_spInt%253d1&wct=2023-08-31T10%3a24%3a00Z&wreply=https%3a%2f%2fidms.pimoecdpw.co.za%2fRuntime%2f" id="ECDPW">
                     <div class="card" id="ECDPW" style="border-top: 03px solid #3cb371;">
                         <img  id="ecd" src="img/Apps shots/IDMS Shot.png" style="width: 500px; height: 335px;" class="img-fluid py-3 m-auto" title="Click to visit the C# web App" >
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-lg-6">
+                <a href="https://tracking-7211d.web.app/" id="Fratelli Analytics">
+                    <div class="card" id="ECDPW" style="border-top: 03px solid lightblue;">
+                        <img  id="ecd" src="img/Apps shots/Screenshot 2025-01-21 150608.png" style="width: 500px; height: 335px;" class="img-fluid py-3 m-auto" title="Click to visit the C# web App" >
                     </div>
                 </a>
             </div>
@@ -620,7 +637,7 @@
     <div class="row">
         <div class="col">
             <div class="container">
-                <p class="text-white pt-3 text-center">© 2023 Ean Macdonald Bosman</p>
+                <p class="text-white pt-3 text-center">© 2025 Ean Macdonald Bosman</p>
 
             </div>
         </div>
