--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
                                 <div class="project-image">
                                     <img src="img/Apps shots/Linkit-up.png" alt="Linkit-up">
                                     <div class="project-overlay">
-                                        <a href="https://github.com/Ean1231/Linkit-up" class="btn btn-light" target="_blank">
-                                            <i class="fab fa-github me-2"></i>View Code
+                                        <a href="https://delivery-ee9c1.web.app" class="btn btn-light" target="_blank">
+                                            <i class="fab fa-github me-2"></i>View Live
                                         </a>
             </div>
                     </div>
