--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         
                         <div class="hero-buttons">
                             <a href="#skills" class="btn btn-primary">Learn More</a>
-                            <a href="cv/Resume of Ean Em Bosman.pdf" download="CV of Ean Bosman" class="btn btn-outline-light">
+                            <a href="cv/Ean Bosman's Resume.pdf" download="CV of Ean Bosman" class="btn btn-outline-light">
                                 <i class="fas fa-download me-2"></i>Download CV
                             </a>
                         </div>
@@ -124,7 +124,7 @@
                     <div class="hero-image-section">
                         <div class="hero-image-container">
                             <div class="image-glow-effect"></div>
-                            <img src="img/person/croped/Bosman pro image.jpg" alt="Ean Bosman" class="hero-profile-image">
+                            <img src="img/person/BeautyPlus_20241104172303559_save.jpg" alt="Ean Bosman" class="hero-profile-image">
                             <div class="image-overlay-gradient"></div>
                         </div>
                         
