--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         
                         <div class="hero-buttons">
                             <a href="#skills" class="btn btn-primary">Learn More</a>
-                            <a href="cv/Ean Bosman's Resume.pdf" download="CV of Ean Bosman" class="btn btn-outline-light">
+                            <a href="cv/Bosman Ean resume.pdf" download="CV of Ean Bosman" class="btn btn-outline-light">
                                 <i class="fas fa-download me-2"></i>Download CV
                             </a>
                         </div>
