--- a/index.html
+++ b/index.html
@@ -532,6 +532,28 @@
                 <!-- Mobile Apps -->
                 <div class="tab-pane fade" id="mobile-apps">
                     <div class="row">
+
+                           <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
+                            <div class="project-card">
+                                <div class="project-image">
+                                    <img src="img/Apps shots/card validation.jpg" alt="credir_card validation">
+                                    <div class="project-overlay">
+                                        <a href="https://scanning-3d323.web.app/" class="btn btn-light" target="_blank">
+                                            <i class="fab fa-github me-2"></i>View Live
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="project-content">
+                                    <h5>PimoApp</h5>
+                                    <p>Flutter Credit card validation App</p>
+                                    <div class="tech-stack">
+                                        <span class="tech-tag">Flutter</span>
+                                        <span class="tech-tag">REST API</span>
+                                        <span class="tech-tag">Dart</span>
+                                    </div>
+    </div>
+</div>
+</div>
                         <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
                             <div class="project-card">
                                 <div class="project-image">
