New ASP .Net App added

--- a/index.html
+++ b/index.html
@@ -769,6 +769,30 @@
     </div>
 </div>
 
+        <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+                            <div class="project-card">
+                                <div class="project-image">
+                                    <img src="img/Apps shots/NetApp.png" alt="Jokes App">
+                                    <div class="project-overlay">
+                                        <a href="https://crudwebapp-hhgef0g9f3dxf9h4.canadacentral-01.azurewebsites.net/" class="btn btn-light" target="_blank">
+                                            <i class="fas fa-external-link-alt me-2"></i>View App
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="project-content">
+                                    <h5>Joke Humour App</h5>
+                                    <p>Have a laughable day and have some humour</p>
+                                    <div class="tech-stack">
+                                        <span class="tech-tag">ASP.Net</span>
+                                        <span class="tech-tag">C#</span>
+                                        <span class="tech-tag">MVC</span>
+                                        <span class="tech-tag">Sql Server</span>
+                                        <span class="tech-tag">Azure Deployment</span>
+                                    </div>
+                                </div>
+        </div>
+        </div>
+
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                             <div class="project-card">
                                 <div class="project-image">
